--- a/styles/index.css
+++ b/styles/index.css
@@ -66,6 +66,7 @@ body{background: #f8f8f8 url(../images/body_bg_line.png);}
 /*tips*/
 .tips{display: block;padding-top: 20px;}
 /*footer*/
+.footer>div{position: relative;}
 .footer-logoBg{width: 160px;height: 250px;position: absolute;top: -80px;left: 50%;margin-left: -600px;background: #292929 url(../images/bottom_left.png);}
 .footer-city{width: 700px;height: 80px;position: absolute;top: -80px;right: 50%;margin-right: -600px;background: url(../images/city.png);}
 
@@ -267,6 +268,7 @@ body{background: #f8f8f8 url(../images/body_bg_line.png);}
 .vipRemark{width: 900px;}
 .vipRemark>.title{font-size: 18px;color: #000;padding: 8px 0;}
 .vipRemark textarea{width: 700px;height: 150px;border: 1px solid #ccc;}
+.vipTips{resize: none;}
 .sumUp{width: 300px;margin-top: 30px;color: #000;padding: 0 15px;}
 .sumUp .element,
 .sumUp .price{width: 50%;text-align: right;line-height: 26px;}
