--- a/styles/yum.css
+++ b/styles/yum.css
@@ -67,6 +67,7 @@ body { /* for ie */
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
 }
 .tc{text-align: center;}
 li>a {
@@ -128,6 +129,7 @@ li>a {
     border-top: 2px solid #585858;
     margin-top: 100px;
     position: relative;
+    min-width: 1200px;
 }
 .footer a {
     color: #fff;
@@ -157,6 +159,7 @@ li>a {
 .nav {
     text-align: center;
     position: relative;
+    min-width: 1200px;
 }
 .nav a {
     color: #666;
